<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".LandingPageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="100dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/semibold"
                android:text="@string/selamat_datang_muhammad_zidane"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_marginTop="-16dp"
                android:background="@drawable/graph"
                android:contentDescription="@null"
                android:importantForAccessibility="no" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="-64dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="24dp">

                    <TextView
                        android:id="@+id/uang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/rp_200_000_000"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/icon_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/count"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@id/uang"
                        app:layout_constraintStart_toEndOf="@id/uang"
                        app:layout_constraintTop_toTopOf="@id/uang" />

                    <ImageView
                        android:id="@+id/btn_transaksi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/faq_tambah"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no"
                        app:layout_constraintEnd_toStartOf="@id/btn_pelanggan"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/uang" />

                    <TextView
                        android:id="@+id/txt_transaksi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/transaksi"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/btn_transaksi"
                        app:layout_constraintStart_toStartOf="@id/btn_transaksi"
                        app:layout_constraintTop_toBottomOf="@id/btn_transaksi" />

                    <ImageView
                        android:id="@+id/btn_pelanggan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pelanggan_fag"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no"
                        app:layout_constraintEnd_toStartOf="@id/btn_lainnya"
                        app:layout_constraintStart_toEndOf="@id/btn_transaksi"
                        app:layout_constraintTop_toTopOf="@id/btn_transaksi" />

                    <TextView
                        android:id="@+id/txt_pelanggan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/pelanggan"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/btn_pelanggan"
                        app:layout_constraintStart_toStartOf="@id/btn_pelanggan"
                        app:layout_constraintTop_toBottomOf="@id/btn_pelanggan" />

                    <ImageView
                        android:id="@+id/btn_lainnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/faq_laporan"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_pelanggan"
                        app:layout_constraintTop_toTopOf="@id/btn_transaksi" />

                    <TextView
                        android:id="@+id/txt_lainnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/laporan"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@id/btn_lainnya"
                        app:layout_constraintStart_toStartOf="@id/btn_lainnya"
                        app:layout_constraintTop_toBottomOf="@id/btn_lainnya" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_menu_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/akun"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/akun"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_menu_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/service"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/layanan"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_menu_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tambahan"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tambahan"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btn_menu_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/printer"
                        android:clickable="true"
                        android:focusable="true"
                        android:importantForAccessibility="no" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/printer"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="32dp"
        app:cardElevation="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/nav_home"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/ic_menu_rotate"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/nav_search"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/ic_menu_search"
                app:tint="#BDBDBD"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/nav_profile"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@android:drawable/ic_menu_myplaces"
                app:tint="#BDBDBD"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>